[gd_scene load_steps=5 format=2]

[ext_resource path="res://sprite/plant_test.png" type="Texture" id=1]
[ext_resource path="res://sprite/extra_sprites.png" type="Texture" id=2]
[ext_resource path="res://ExtraSprites.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 19.1703

[node name="ExtraSprites" type="Node2D"]
use_parent_material = true
script = ExtResource( 3 )

[node name="BG" type="Sprite" parent="."]
use_parent_material = true
texture = ExtResource( 2 )

[node name="Sprite1" type="Sprite" parent="."]
use_parent_material = true
position = Vector2( -3.87, 3.57231 )
texture = ExtResource( 1 )

[node name="Sprite2" type="Sprite" parent="."]
use_parent_material = true
position = Vector2( 5.12031, -4.34631 )
texture = ExtResource( 1 )

[node name="Sprite3" type="Sprite" parent="."]
use_parent_material = true
position = Vector2( 5.12031, -4.34631 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 16384
collision_mask = 16384

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )
[connection signal="body_entered" from="Area2D" to="." method="_on_player"]
